<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:gravity="end"
    >
    <ScrollView
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:descendantFocusability="beforeDescendants">
        <LinearLayout
            android:id="@+id/content"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@color/blur"
            android:focusable="false"
            android:focusableInTouchMode="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/title_blur"
                    android:text="@string/app_name"
                    android:textSize="16sp"
                    android:layout_gravity="bottom" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/version_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/description_blur"
                    android:text=""
                    android:textSize="14sp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/title_blur"
                android:textSize="14sp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:text="項目地址：https://github.com/horsemail/yourtv" />
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/remote_settings"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/description_blur"
                    android:textColor="@color/blur"
                    android:layout_marginEnd="5dp"
                    android:textSize="14sp"
                    android:text="@string/server"
                    android:nextFocusRight="@id/confirm_config"
                    android:nextFocusLeft="@id/clear"
                    android:nextFocusDown="@id/check_version"
                    android:nextFocusUp="@id/switch_show_source_button"
                    android:focusable="true"
                    android:focusedByDefault="true"
                    android:focusableInTouchMode="true" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/confirm_config"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/description_blur"
                    android:textColor="@color/blur"
                    android:layout_marginEnd="5dp"
                    android:textSize="14sp"
                    android:text="@string/channels"
                    android:nextFocusRight="@id/clear"
                    android:nextFocusLeft="@id/remote_settings"
                    android:nextFocusDown="@id/verify_user"
                    android:nextFocusUp="@id/switch_show_source_button"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/clear"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/description_blur"
                    android:textColor="@color/blur"
                    android:layout_marginEnd="5dp"
                    android:text="@string/clear"
                    android:textSize="14sp"
                    android:nextFocusRight="@id/remote_settings"
                    android:nextFocusLeft="@id/confirm_config"
                    android:nextFocusDown="@id/appreciate"
                    android:nextFocusUp="@id/switch_show_source_button"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/check_version"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/description_blur"
                    android:textColor="@color/blur"
                    android:layout_marginEnd="5dp"
                    android:textSize="14sp"
                    android:text="@string/check_version"
                    android:nextFocusRight="@id/verify_user"
                    android:nextFocusLeft="@id/appreciate"
                    android:nextFocusDown="@id/switch_channel_reversal"
                    android:nextFocusUp="@id/remote_settings"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/verify_user"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/description_blur"
                    android:textColor="@color/blur"
                    android:layout_marginEnd="5dp"
                    android:text="@string/verify_user"
                    android:textSize="14sp"
                    android:nextFocusRight="@id/appreciate"
                    android:nextFocusLeft="@id/check_version"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/appreciate"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/description_blur"
                    android:textColor="@color/blur"
                    android:layout_marginEnd="5dp"
                    android:text="@string/appreciate"
                    android:textSize="14sp"
                    android:nextFocusRight="@id/check_version"
                    android:nextFocusLeft="@id/verify_user"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_channel_reversal"
                android:text="@string/title_channel_reversal"
                android:textColor="@color/title_blur"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusUp="@id/check_version"
                android:nextFocusDown="@id/switch_channel_num"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_channel_num"
                android:text="@string/title_channel_num"
                android:textColor="@color/title_blur"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_time"
                android:text="@string/title_time"
                android:textColor="@color/title_blur"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_display_seconds"
                android:text="@string/display_seconds"
                android:textColor="@color/title_blur"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_boot_startup"
                android:text="@string/title_boot_startup"
                android:textColor="@color/title_blur"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_repeat_info"
                android:text="@string/title_repeat_info"
                android:textColor="@color/title_blur"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_config_auto_load"
                android:text="@string/title_config_auto_load"
                android:textColor="@color/title_blur"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_default_like"
                android:text="@string/title_default_like"
                android:textColor="@color/title_blur"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_show_all_channels"
                android:text="@string/show_all_channels"
                android:textColor="@color/title_blur"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_compact_menu"
                android:text="@string/compact_menu"
                android:textColor="@color/title_blur"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_soft_decode"
                android:text="@string/soft_decode"
                android:textColor="@color/title_blur"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color"
                />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_auto_switch_source"
                android:text="@string/auto_switch_source"
                android:textColor="@color/title_blur"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_auto_update_sources"
                android:text="@string/auto_update_sources"
                android:textColor="@color/title_blur"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_show_source_button"
                android:text="@string/show_source_button"
                android:textColor="@color/title_blur"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_enable_screen_off_audio"
                android:text="@string/enable_screen_off_audio"
                android:textColor="@color/title_blur"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:thumbTint="@color/switch_thumb_color"
                app:trackTint="@color/switch_track_color" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>